[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/Lobby/scripts/CreateServer.gd" type="Script" id=2]
[ext_resource path="res://fonts/Roboto.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.215686, 0.215686, 0.239216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0901961, 0.0901961, 0.0980392, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="CreateServer" type="ScrollContainer"]
margin_right = 654.0
margin_bottom = 536.0
size_flags_horizontal = 3
custom_styles/bg = SubResource( 3 )
scroll_horizontal_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 652.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HeaderMargin" type="MarginContainer" parent="VBox"]
margin_right = 650.0
margin_bottom = 70.0
custom_constants/margin_top = 32

[node name="Label" type="Label" parent="VBox/HeaderMargin"]
margin_top = 32.0
margin_right = 650.0
margin_bottom = 70.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "No servers selected"
align = 1

[node name="ServerPrompt" type="MarginContainer" parent="VBox"]
margin_top = 74.0
margin_right = 650.0
margin_bottom = 452.0
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64

[node name="VBox" type="VBoxContainer" parent="VBox/ServerPrompt"]
margin_left = 64.0
margin_top = 64.0
margin_right = 586.0
margin_bottom = 378.0

[node name="ServerName" type="Label" parent="VBox/ServerPrompt/VBox"]
margin_right = 522.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Server Name"

[node name="ServerNameLineEdit" type="LineEdit" parent="VBox/ServerPrompt/VBox"]
margin_top = 42.0
margin_right = 522.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 3 )
placeholder_text = "My awesome server"

[node name="HBox" type="HBoxContainer" parent="VBox/ServerPrompt/VBox"]
margin_top = 94.0
margin_right = 522.0
margin_bottom = 184.0
custom_constants/separation = 16

[node name="IP" type="VBoxContainer" parent="VBox/ServerPrompt/VBox/HBox"]
margin_right = 278.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/ServerPrompt/VBox/HBox/IP"]
margin_right = 278.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "IP"

[node name="IPLineEdit" type="LineEdit" parent="VBox/ServerPrompt/VBox/HBox/IP"]
margin_top = 42.0
margin_right = 278.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 3 )
placeholder_text = "127.0.0.1"

[node name="Port" type="VBoxContainer" parent="VBox/ServerPrompt/VBox/HBox"]
margin_left = 294.0
margin_right = 400.0
margin_bottom = 90.0
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="VBox/ServerPrompt/VBox/HBox/Port"]
margin_right = 106.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="VBox/ServerPrompt/VBox/HBox/Port"]
margin_top = 42.0
margin_right = 106.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
placeholder_text = "42069"

[node name="MaxClients" type="VBoxContainer" parent="VBox/ServerPrompt/VBox/HBox"]
margin_left = 416.0
margin_right = 522.0
margin_bottom = 90.0
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="VBox/ServerPrompt/VBox/HBox/MaxClients"]
margin_right = 106.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "Clients"

[node name="ClientsLineEdit" type="LineEdit" parent="VBox/ServerPrompt/VBox/HBox/MaxClients"]
margin_top = 42.0
margin_right = 106.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
placeholder_text = "5"

[node name="Inner" type="MarginContainer" parent="VBox"]
margin_top = 456.0
margin_right = 650.0
margin_bottom = 532.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Buttons" type="HBoxContainer" parent="VBox/Inner"]
margin_left = 16.0
margin_top = 16.0
margin_right = 634.0
margin_bottom = 60.0
custom_constants/separation = 32

[node name="CreateServer" type="Button" parent="VBox/Inner/Buttons"]
margin_right = 293.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Create Server"

[node name="AddServer" type="Button" parent="VBox/Inner/Buttons"]
margin_left = 325.0
margin_right = 618.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "AddServer"
